--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1731,3 +1731,11 @@ div:where(.swal2-container) h2:where(.swal2-title) {
   border-radius: 10px;
   background-color: rgb(39, 39, 39);
 }
+
+.gallery-container {
+  border: 2px dashed gray;
+  border-radius: 10px;
+  background-color: rgb(39, 39, 39);
+  padding: 20px;
+
+}
