--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -185,7 +185,7 @@ body {
     transform: scale(0.98);
     box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    transform: translateY(-20px);
+    /* transform: translateY(-20px); */
   }
 
   .card-img-overlay {
